--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "prestart": "if [ ! -d node_modules ]; then npm install; fi",
     "dev": "babel-node src/server",
+    "start": "babel-node src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,8 +35,10 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "figlet": "^1.2.0",
-    "graphql": "^0.11.7",
+    "graphql": "^0.12.3",
+    "graphql-subscriptions": "^0.5.5",
     "hashids": "^1.1.4",
+    "isomorphic-fetch": "^2.2.1",
     "lusca": "^1.5.2",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.7",
@@ -50,6 +53,7 @@
     "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "socketio-jwt": "^4.5.0",
+    "subscriptions-transport-ws": "^0.9.4",
     "winston": "^2.4.0"
   },
   "devDependencies": {
