--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "figlet": "^1.2.0",
     "graphql": "^0.12.3",
     "graphql-subscriptions": "^0.5.5",
+    "graphql-tools": "^2.13.0",
     "hashids": "^1.1.4",
     "isomorphic-fetch": "^2.2.1",
     "lusca": "^1.5.2",
