--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/refleninc/convospot-console-api#readme",
   "dependencies": {
+    "babel-plugin-inline-import": "^2.0.6",
     "bluebird": "^3.5.1",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.1",
