--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/refleninc/convospot-console-api#readme",
   "dependencies": {
+    "@types/graphql": "^0.11.7",
+    "apollo-client": "^2.0.4",
     "bluebird": "^3.5.1",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.1",
