--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prestart": "if [ ! -d node_modules ]; then npm install; fi",
     "dev": "babel-node src/server",
     "start": "babel-node src/server",
+    "debug": "babel-node --inspect --debug-brk src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "@types/graphql": "^0.11.7",
     "apollo-client": "^2.0.4",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
@@ -43,6 +45,7 @@
     "figlet": "^1.2.0",
     "graphiql": "^0.11.10",
     "graphql": "^0.12.3",
+    "graphql-server-express": "^1.3.2",
     "graphql-subscriptions": "^0.5.5",
     "graphql-tools": "^2.13.0",
     "hashids": "^1.1.4",
