--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "json-stringify-safe": "^5.0.1",
     "lusca": "^1.5.2",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.7",
+    "mongoose": "4.10",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.9.0",
     "node-uuid": "^1.4.8",
