--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "prestart": "if [ ! -d node_modules ]; then npm install; fi",
-    "dev": "babel-node src/server",
+    "dev": "BABEL_DISABLE_CACHE=1 babel-node src/server",
     "start": "babel-node src/server",
     "debug": "babel-node debug src/server",
     "inspect": "babel-node --inspect --debug-brk src/server",
