--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "birch-api",
-  "version": "1.0.0",
-  "description": "convospot console api",
+  "version": "2.0.0",
+  "description": "The API for the management console of reflen",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -12,7 +12,7 @@
     "url": "https://www.reflen.com"
   },
   "engines": {
-    "node": ">=8.10",
+    "node": ">=10",
     "npm": ">=6.4"
   },
   "scripts": {
@@ -24,55 +24,55 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
+    "bluebird": "^3.5.4",
+    "body-parser": "^1.19.0",
     "composable-middleware": "^0.3.0",
-    "compression": "^1.7.1",
-    "connect-mongo": "^2.0.0",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "ejs": "^2.5.7",
+    "compression": "^1.7.4",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
-    "express-http-proxy": "^1.1.0",
-    "express-jwt": "^5.3.0",
-    "express-session": "^1.15.6",
-    "express-validator": "^4.3.0",
-    "figlet": "^1.2.0",
-    "google-protobuf": "^3.5.0",
-    "graphiql": "^0.11.10",
-    "graphql": "^0.12.3",
-    "graphql-server-express": "^1.3.2",
-    "graphql-subscriptions": "^0.5.5",
-    "graphql-tools": "^2.13.0",
-    "grpc": "^1.8.0",
-    "hashids": "^1.1.4",
+    "express": "^4.16.4",
+    "express-graphql": "^0.8.0",
+    "express-http-proxy": "^1.5.1",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
+    "figlet": "^1.2.1",
+    "google-protobuf": "^3.7.1",
+    "graphiql": "^0.13.0",
+    "graphql": "^14.3.0",
+    "graphql-server-express": "^1.4.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^4.0.4",
+    "grpc": "^1.20.3",
+    "hashids": "^1.2.2",
     "isomorphic-fetch": "^2.2.1",
     "json-stringify-safe": "^5.0.1",
-    "lusca": "^1.5.2",
-    "method-override": "^2.3.10",
-    "mongoose": "4.10",
+    "lusca": "^1.6.1",
+    "method-override": "^3.0.0",
+    "mongoose": "5.5",
     "mongoose-timestamp": "^0.6.0",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pretty-error": "^2.1.1",
-    "pubsub-js": "^1.5.7",
-    "rc": "^1.2.2",
+    "pubsub-js": "^1.7.0",
+    "rc": "^1.2.8",
     "redis": "^2.8.0",
-    "seneca": "3.2.0",
-    "seneca-amqp-transport": "1.1.1",
-    "serve-favicon": "^2.4.5",
+    "seneca": "^3.9.0",
+    "seneca-amqp-transport": "2.2.0",
+    "serve-favicon": "^2.5.0",
     "slack-node": "^0.1.8",
-    "socket.io": "^2.0.4",
+    "socket.io": "^2.2.0",
     "socketio-jwt": "^4.5.0",
-    "subscriptions-transport-ws": "^0.9.4",
-    "winston": "^2.4.0"
+    "subscriptions-transport-ws": "^0.9.16",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0"
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
