--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
+    "cli-table": "^0.3.1",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.4",
     "connect-mongo": "^2.0.3",
