--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev": "BABEL_DISABLE_CACHE=1 babel-node src/server",
     "start": "babel-node src/server",
     "debug": "babel-node debug src/server",
+    "generate": "cd src;prisma generate",
     "inspect": "babel-node --inspect --debug-brk src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,8 +30,6 @@
     "cli-table": "^0.3.1",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.4",
-    "connect-mongo": "^2.0.3",
-    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
@@ -47,6 +46,7 @@
     "graphql-server-express": "^1.4.0",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.4",
+    "graphql-yoga": "^1.17.4",
     "grpc": "^1.20.3",
     "hashids": "^1.2.2",
     "isomorphic-fetch": "^2.2.1",
@@ -60,13 +60,12 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pretty-error": "^2.1.1",
+    "prisma-client-lib": "^1.30.4",
     "pubsub-js": "^1.7.0",
     "rc": "^1.2.8",
-    "redis": "^2.8.0",
     "seneca": "^3.9.0",
     "seneca-amqp-transport": "2.2.0",
     "serve-favicon": "^2.5.0",
-    "slack-node": "^0.1.8",
     "socket.io": "^2.2.0",
     "socketio-jwt": "^4.5.0",
     "subscriptions-transport-ws": "^0.9.16",
