--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "google-protobuf": "^3.7.1",
     "graphiql": "^0.13.0",
     "graphql": "^14.3.0",
+    "graphql-compose": "^7.0.1",
+    "graphql-compose-mongoose": "^7.0.1",
     "graphql-server-express": "^1.4.0",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.4",
@@ -53,7 +55,7 @@
     "json-stringify-safe": "^5.0.1",
     "lusca": "^1.6.1",
     "method-override": "^3.0.0",
-    "mongoose": "5.5",
+    "mongoose": "^5.5.6",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.9.1",
     "node-uuid": "^1.4.8",
