--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,17 @@
 {
-  "presets": ["es2015"]
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-flow-strip-types"
+  ],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": 10
+        }
+      }
+    ],
+    "@babel/preset-flow"
+  ]
 }
