--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-flow": "^7.0.0",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "cli-table": "^0.3.1",
@@ -41,19 +48,17 @@
     "express-validator": "^5.3.1",
     "figlet": "^1.2.1",
     "google-protobuf": "^3.7.1",
-    "graphiql": "^0.13.0",
     "graphql": "^14.3.0",
     "graphql-compose": "^7.0.1",
     "graphql-compose-mongoose": "^7.0.1",
-    "graphql-server-express": "^1.4.0",
+    "graphql-compose-relay": "^5.0.1",
+    "graphql-playground-middleware-express": "^1.7.12",
+    "graphql-shield": "^5.3.5",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.4",
-    "graphql-yoga": "^1.17.4",
-    "grpc": "^1.20.3",
     "hashids": "^1.2.2",
     "isomorphic-fetch": "^2.2.1",
     "json-stringify-safe": "^5.0.1",
-    "lusca": "^1.6.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.6",
     "mongoose-timestamp": "^0.6.0",
@@ -74,7 +79,16 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "flow-bin": "0.98.0",
+    "jest": "^24.7.1",
+    "prettier": "^1.17.0"
   }
 }
