--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.5.6",
     "mongoose-timestamp": "^0.6.0",
+    "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
