--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-flow": "^7.0.0",
+    "base64url": "^3.0.1",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "cli-table": "^0.3.1",
@@ -45,7 +46,6 @@
     "express-http-proxy": "^1.5.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.16.1",
-    "express-validator": "^5.3.1",
     "figlet": "^1.2.1",
     "google-protobuf": "^3.7.1",
     "graphql": "^14.3.0",
@@ -77,6 +77,7 @@
     "socket.io": "^2.2.0",
     "socketio-jwt": "^4.5.0",
     "subscriptions-transport-ws": "^0.9.16",
+    "validator": "^10.11.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
