--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-bearer-token": "^2.4.0",
     "express-graphql": "^0.8.0",
     "express-http-proxy": "^1.5.1",
     "express-jwt": "^5.3.1",
